debhelper (10+unreleased) UNRELEASED; urgency=medium

  * Apply patch from Michael Biebl to take over dh-systemd
    package to ease backporting to jessie-backports.
    (Closes: #837585)
  * Apply patch from Helmut Grohne and Julian Andres Klode
    to improve cross-building support in the cmake build
    system.  (Closes: #833789)

 -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000

debhelper (10) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib.pm: Support a new named "beta-tester" compat level.
    If you want to participate in beta testing of new compat
    levels, please review "man 7 debhelper" for more
    information.
  * Dh_Lib.pm: Fix bug in detection of existing auto-trigger.

  [ Axel Beckert ]
  * Apply patch by Jens Reyer to fix typo in dh_installdocs man page.
    (Closes: #836344)
  * Use uppercase "Debian" in package description when the project is
    meant. Fixes lintian warning capitalization-error-in-description.
  * Apply "wrap-and-sort -a"
  * Add a .mailmap file for making "git shortlog" work properly.

  [ Translations ]
  * Update German translation (Chris Leick) (Closes: #835593)
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #835403)
  * Update French translation (Baptiste Jammet) (Closes: #836693)

 -- Niels Thykier <niels@thykier.net>  Sun, 11 Sep 2016 09:00:23 +0000

debhelper (9.20160814) unstable; urgency=medium

  * dh_installdocs: Apply patch from Sven Joachim to make
    --link-doc work again in compat 11 (See: #830309)
  * t: Apply patch from Sven Joachim to add some test cases
    to dh_installdocs's --link-doc behaviour.
    (Closes: #831465)
  * dh_installinit,dh_systemd_start: Apply patches from
    Peter Pentchev to make -R default in compat 10 (as
    documented, but not as implemented).
  * perl_{build,makemaker}.pm: Apply patch from Dominic
    Hargreaves to explicitly pass -I. to perl.  This is to
    assist with the fix for CVE-2016-1238.  (Closes: #832436)