@@ -6,6 +6,10 @@ debhelper (10+unreleased) UNRELEASED; urgency=medium
   * Apply patch from Helmut Grohne and Julian Andres Klode
     to improve cross-building support in the cmake build
     system.  (Closes: #833789)
+  * Make the makefile.pm buildsystem (but not subclasses thereof)
+    pass the CC and CXX variables set to the host compilers when
+    cross-building.  Thanks to Helmut Grohne for the idea and
+    the initial patch.  (Closes: #836988)
 
  -- Niels Thykier <niels@thykier.net>  Wed, 14 Sep 2016 06:07:02 +0000
 
